Use signleton marked options service. Fix popover size to not overflow viewport size. Add path routing for rulenode help assets to k8s ingress configuration.

--- a/ui-ngx/src/app/shared/components/help-markdown.component.scss
+++ b/ui-ngx/src/app/shared/components/help-markdown.component.scss
@@ -16,8 +16,8 @@
 :host {
   .tb-help-markdown {
     overflow: auto;
-    max-width: 50vw;
-    max-height: 50vh;
+    max-width: 80vw;
+    max-height: 80vh;
     margin-top: 30px;
   }
 }
